# React

./: .gitignore  README.md
private_diary/: Dockerfile  docker-compose.yaml  pyproject.toml
private_diary/diary/: models.py  serializers.py  views.py
private_diary/diary/migrations/: 0001_initial.py
private_diary/private_diary/: settings.py  urls.py
projectV-React/: package-lock.json  package.json
projectV-React/src/: App.jsx
projectV-React/src/API/: PostService.js
projectV-React/src/components/: ClassCounter.jsx  Counter.jsx  PostFilter.jsx  PostForm.jsx  PostItem.jsx  PostList.jsx
projectV-React/src/components/UI/Loader/: Loader.jsx
projectV-React/src/components/UI/MyModal/: MyModal.module.css  myModal.jsx
projectV-React/src/components/UI/Navbar/: Navbar.jsx
projectV-React/src/components/UI/button/: MyButton.jsx
projectV-React/src/components/UI/input/: MyInput.jsx
projectV-React/src/components/UI/pagination/: Pagination.jsx
projectV-React/src/components/UI/select/: MySelect.jsx
projectV-React/src/hooks/: useFetching.js  usePosts.js
projectV-React/src/pages/: About.jsx  Tasks.jsx
projectV-React/src/styles/: App.css
