[project]
name = "private_diary"
version = "0.1.0"
description = ""
authors = [
    {name = "Liuba-K",email = "kundasl1@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "Django (>=4.2.20,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "Markdown (>=3.7,<4.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
# ...
packages = [
    { include = "private_diary" },
]
